# PandaSkill

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.streamlit/: config.toml
pandaskill/app/: data.py  game_page.py  leaderboard_page.py  misc.py  player_team_page.py  region_page.py  streamlit_app.py
pandaskill/artifacts/data/app/: pandaskill_pscores.csv  (+1 more)
pandaskill/experiments/: preprocess_data.py  run_performance_score_experiment.py  run_preformance_score_experiment.py  run_skill_rating_experiment.py
pandaskill/experiments/data/: drop_games.py  player_region.py  preprocess_data.py
pandaskill/experiments/general/: metrics.py  utils.py  visualization.py
pandaskill/experiments/paper/: create_experts_eval_figure.py  create_game_analysis_table.py
pandaskill/experiments/performance_score/: shap_beeswarm.py  training_testing_cv.py  visualization.py
pandaskill/experiments/skill_rating/: evaluation.py  ranking.py  visualization.py
pandaskill/libs/feature_extraction/: basic_features.py  event_features.py
pandaskill/libs/performance_score/: base_model.py  percentile_mapper.py  perf_index_model.py  playerank_model.py  pscore_model.py
pandaskill/libs/skill_rating/: bayesian.py  ewma.py  trueskill.py
tests/libs/feature_extraction/: test_basic_features.py  test_event_features.py
tests/libs/performance_score/: test_base_model.py  test_percentile_mapper.py  test_perf_index_model.py  test_playerank_model.py  test_pscore_model.py
tests/libs/skill_rating/: test_bayesian.py  test_ewma.py
(+14 files in other folders)
